@@ -25,7 +25,9 @@ The rules for this file:
         * write selections for other codes from AtomGroups (VMD,
           pymol, CHARMM, Gromacs ndx)
         * gro reader
-
+        * trajectory reader: DCDReader can reverse trajectory with
+          negative step increment; XTC/TRRReader can do simple
+          (forward) slices by doing (slow!) sequential iteration
 
 05/28/10 orbeckst, denniej0
         * 0.6.2 release
